--- a/roblokis/js/Theme/styles/badgesSimple.css
+++ b/roblokis/js/Theme/styles/badgesSimple.css
@@ -30,5 +30,5 @@
     height: auto;
 }
 .game-badges-list .badge-row .badge-stats-container, game-badges-list .badge-row .badge-stats-container {
-	display: none;
+	display: none !important;
 }
